compiling_error.txt
/Users/ryandirezze/Documents/GitHub/cs162_summer18/a1_implementation.cpp:27:16: error: variable-sized object may not be initialized
   string grid[x][x] = {};
               ^
1 error generated.
